// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseSearchCard > renders default as expected 1`] = `
<div>
  <a
    class="course-search-card flex flex-col md:flex-row gap-6 container-lined p-6 max-w-[828px] size-full md:max-h-[320px] transition-transform duration-200 hover:scale-[1.01] hover:container-elevated"
    href="https://bluedot.org/courses/what-the-fish"
  >
    <div
      class="course-search-card__image-container h-[240px] w-full md:w-fit"
    >
      <img
        alt="Title"
        class="course-search-card__image size-full object-cover rounded-lg"
        src="/images/courses/default.jpg"
      />
    </div>
    <div
      class="course-search-card__content flex flex-col gap-4 flex-1"
    >
      <div
        class="course-search-card__text"
      >
        <h3
          class="bluedot-h3 course-search-card__title mb-6"
        >
          Title
        </h3>
      </div>
    </div>
  </a>
</div>
`;

exports[`CourseSearchCard > renders with optional args 1`] = `
<div>
  <a
    class="course-search-card flex flex-col md:flex-row gap-6 container-lined p-6 max-w-[828px] size-full md:max-h-[320px] transition-transform duration-200 hover:scale-[1.01] hover:container-elevated"
    href="https://bluedot.org/courses/what-the-fish"
  >
    <div
      class="course-search-card__image-container h-[240px] w-full md:w-fit"
    >
      <img
        alt="Title"
        class="course-search-card__image size-full object-cover rounded-lg"
        src="/courses/what-the-fish/image.png"
      />
    </div>
    <div
      class="course-search-card__content flex flex-col gap-4 flex-1"
    >
      <div
        class="course-search-card__text"
      >
        <h3
          class="bluedot-h3 course-search-card__title mb-6"
        >
          Title
        </h3>
        <p
          class="bluedot-p course-search-card__description text-sm overflow-hidden text-bluedot-black text-ellipsis mb-6"
        >
          A short description of the course
        </p>
        <span
          class="tag container-lined inline-flex items-center px-4 py-2 text-xs font-semibold text-color-secondary-text course-search-card__duration"
          role="status"
        >
          10 days
        </span>
      </div>
    </div>
  </a>
</div>
`;
